Thu Oct 16 01:02:04 2003  Matthias Clasen  <maclas@gmx.de>

	* gobject/tmpl/gparamspec.sgml: Additions, document 
	GParamSpecPool.

Wed Oct 15 00:56:30 2003  Matthias Clasen  <maclas@gmx.de>

	* gobject/tmpl/gclosure.sgml: Improvements from Owen's feedback. 

Tue Oct 14 02:35:45 2003  Matthias Clasen  <maclas@gmx.de>

	* gobject/gobject-sections.txt: Move the g_cclosure_marshal_*
	functions to a non-private subsection, since these functions
	are not private.

Tue Oct 14 02:35:16 2003  Matthias Clasen  <maclas@gmx.de>

	* gobject/tmpl/gclosure.sgml: Fill in.

Sun Oct  5 23:23:53 2003  Matthias Clasen  <maclas@gmx.de>

	* gobject/glib-sections.txt: 
	* gobject/gobject-sections.txt: Fix includes.

	* gobject/tmpl/value_collection.sgml: Add docs found in the 
	header.

Thu Oct  2 01:22:46 2003  Owen Taylor  <otaylor@redhat.com>

	* gobject/gobject-sections.txt gobject/tmpl/gtype.sgml: 
	Add g_type_add/remove_interface_check()

2003-09-30  Matthias Clasen  <maclas@gmx.de>

	* gobject/tmpl/gparamspec.sgml: 
	* gobject/tmpl/signals.sgml: Additions.

	* glib/glib-sections.txt: Add g_unichar_get_mirror_char and
	g_static_mutex_get_mutex_impl_shortcut.

Mon Sep 29 10:55:23 2003  Owen Taylor  <otaylor@redhat.com>

	*  gobject/gobject-sections.txt gobject/tmpl/gtype.sgml:
	Docs for g_type_default_interface_ref(), etc.

Fri Sep 12 16:29:29 2003  Owen Taylor  <otaylor@redhat.com>

	* gobject/tmpl/signals.sgml: Add docs for
	g_signal_accumulator_true_handled.

2003-09-12  Matthias Clasen  <maclas@gmx.de>

	* gobject/gobject-sections.txt: Add new g_value_take_x() functions.

	* gobject/tmpl/param_value_types.sgml: Document new g_value_take_x()
	functions.  (#100948)

2003-08-05  Matthias Clasen  <maclas@gmx.de>

	* glib/tmpl/string_utils.sgml: Add note about in-place editing to g_strdelimit() doc.
	(#118875, Thomas Vander Stichele)

2003-07-30  Matthias Clasen  <maclas@gmx.de>

	* glib/tmpl/misc_utils.sgml: Move g_getenv() docs inline.

	* glib/tmpl/string_utils.sgml: Small fixes.