@@ -1,3 +1,11 @@
+Fri Oct 17 00:23:51 2003  Matthias Clasen  <maclas@gmx.de>
+
+	* gobject/Makefile.am (GTKDOC_LIBS): 
+	(INCLUDES): Add the necessary stuff to compile gobject-scan.
+
+	* gobject/gobject.types: Add g_type_module_get_type() and
+	g_type_plugin_get_type().
+
 Thu Oct 16 01:02:04 2003  Matthias Clasen  <maclas@gmx.de>
 
 	* gobject/tmpl/gparamspec.sgml: Additions, document 
